grammer.ebnf
program = decl* EOF ;

decl = 
      var_decl
    | stmt
    ;

var_decl = "var" IDENTIFIER ( "=" expr )? ";" ;

stmt = 
      print_stmt
    | block_stmt
    | expr_stmt
    ;
 
print_stmt = "print" expr ";" ;

block_stmt = "{" decl* "}" ;

expr_stmt = expr ";" ;

expr = assignment_expr ;

assignment_expr = IDENTIFIER "=" assignment_expr | equality_expr ;

equality_expr = comparison_expr ( ( "!=" | "==" ) comparison_expr )* ;

comparison_expr = term_expr ( ( "<" | "<=" | ">" | ">=" ) term_expr )* ;

term_expr = factor_expr ( ( "+" | "-" ) factor_expr )* ;

factor_expr = unary_expr ( ( "*" | "/" ) unary_expr )* ;

unary_expr = 
      ( "!" | "-" ) unary_expr
    | primary_expr
    ;

primary_expr =
      NUMBER
    | STRING
    | IDENTIFIER
    | "true"
    | "false"
    | "nil"
    | "(" expr ")"
    ;

(* repl *)

repl_item = ( decl | expr| repl_cmd ) EOF ;

repl_cmd = ";" ( "quit" ) ; 
